--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,16 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+
+    <div id="loader">
+      <div class="wrap">
+        <div class="loading">
+          <div class="bounceball"></div>
+          <div class="textball">NOW LOADING</div>
+        </div>
+      </div>
+
+    </div>
     <div id="root"></div>
   </body>
 </html>
