--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,18 @@
         </div>
       </div>
 
+      <div id="error">
+        <div class="cont_principal">
+          <div class="cont_error">
+            
+          <h1>Oops</h1>  
+            <p>Bad Server Request... Server Not Responding</p>
+            </div>
+          <div class="cont_aura_1"></div>
+          <div class="cont_aura_2"></div>
+          </div>
+      </div>
+
     </div>
     <div id="root"></div>
   </body>
